# dual-lib

./: .gitignore  CHANGELOG.md  README.md  dual.py  license  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/dual/: __init__.py  core.py  differentiation.py
tests/: test_arithmetic.py  test_calculus.py  test_construction.py  test_mathfunc.py  test_numpy.py  test_other.py  test_rounding.py  test_trig.py
