[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-number"
dynamic = ["version", "readme"]
requires-python = ">= 3.8"
authors = [{name = "Louis Billaut", email = "louisbillaut30052007@gmail.com"}]
license = "MIT"
readme = "README.md"
description = "Dual Number Library"
keywords = ["dual", "derivative", "differentiation", "epsilon"]

[tool.setuptools.dynamic]
version = {attr = "dual.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Repository = "https://github.com/BaguetteBunny/dual-lib"
Package = "https://pypi.org/project/dual-number/"
Documentation = "https://github.com/BaguetteBunny/dual-lib/blob/main/README.md"
Changelog = "https://github.com/BaguetteBunny/dual-lib/blob/main/CHANGELOG.md"
Issues = "https://github.com/BaguetteBunny/dual-lib/issues"

[tool.setuptools.packages.find]
where = ["src"]